Tue Feb 26 23:26:13 2013  Kouhei Sutou  <kou@cozmixng.org>

        * lib/rexml/document.rb: move entity_expansion_limit accessor to ...
        * lib/rexml/rexml.rb: ... here to make rexml/text independent from
          REXML::Document. It causes circular require.
        * lib/rexml/document.rb (REXML::Document.entity_expansion_limit):
          deprecated.
        * lib/rexml/document.rb (REXML::Document.entity_expansion_limit=):
          deprecated.
        * lib/rexml/text.rb: add missing require "rexml/rexml" for
          REXML.entity_expansion_limit.
          Reported by Robert Ulejczyk. Thanks!!! [ruby-core:52895] [Bug #7961]

Fri Feb 22 18:31:46 2013  Aaron Patterson <aaron@tenderlovemaking.com>

        * lib/rexml/document.rb (REXML::Document.entity_expansion_text_limit):
          new attribute to read/write entity expansion text limit.  the default
          limit is 10Kb.

        * lib/rexml/text.rb (REXML::Text.unnormalize): check above attribute.

Fri Oct 12 12:25:15 2012  URABE Shyouhei  <shyouhei@ruby-lang.org>

        * error.c (name_err_to_s): we need not infect msg.

        * test/ruby/test_exception.rb (TestException#test_exception_to_s_should_not_propagate_untrustedness): test for it.

Fri Mar  2 11:44:33 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

        * marshal.c (mark_dump_arg): mark destination string.  patch by
          Vit Ondruch.  [Bug #4339]

        * marshal.c (clear_dump_arg, clear_load_arg): clean up also data
          tables as same as symbols tables.

Fri Mar  2 11:44:33 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

        * marshal.c (struct {dump,load}_arg): manage with dfree, instead
          of using local variable which may be moved by context switch.
          [ruby-dev:39425]

Mon Oct 12 22:35:00 2011  Brent Roman  <brent@mbari.org>

        * fixed inverted NUL_P test in eval.c(cc_purge)

Mon Oct 11 17:55:00 2011  Brent Roman  <brent@mbari.org>
